--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,44 @@ html{
     scroll-behavior: smooth;
 }
 
+section{
+    padding: 2rem 9%;
+}
+
+.btn {
+    display: inline-block;
+    margin-top: 1rem;
+    padding: .5rem;
+    padding-left: 1rem;
+    border: var(--border);
+    border-radius: .5rem;
+    box-shadow: var(--box-shadow);
+    color: var(--green);
+    cursor: pointer;
+    font-size: 1.7rem;
+}
+
+.btn span{
+    padding: .7rem 1rem;
+    border-radius: .5rem;
+    background: var(--green);
+    color: #FFF;
+    margin-left: .5rem;
+}
+
+.btn:hover{
+    background: var(--green);
+    color: #FFF;
+}
+
+.btn:hover span{
+    color: var(--green);
+    background: #FFF;
+    margin-left:1.2rem;
+}
+
+
+
 /* HEADER */
 .header{
     padding: 2rem 9%;
@@ -75,6 +113,39 @@ html{
     display: none;
 }
 
+.home{
+    display:flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+    padding: 10rem;
+}
+
+.home .image {
+    flex: 1 1 45rem;
+}
+
+.home .image img{
+    width: 100%;
+}
+
+.home .content{
+    flex: 1 1 45rem;
+}
+
+.home .content h3{
+    font-size: 4.5rem;
+    color: var(--black);
+    line-height: 1.8;
+    text-shadow: var(--text-shadow);
+}
+
+.home .content p{
+    font-size: 1.7rem;
+    color:var(--light-color);
+    line-height: 1.8;
+    padding: 1rem 0;
+}
 
 
 
@@ -97,6 +168,10 @@ html{
     }
 
     .header{
+        padding: 2rem;
+    }
+    
+    section{
         padding: 2rem;
     }
 }
@@ -138,5 +213,6 @@ html{
     html{
         font-size: 50%;
     }    
+    
 }
 
