--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,10 @@ section{
     padding: 2rem 9%;
 }
 
+section:nth-child(even){
+background: #f5f5f5;
+}
+
 .btn {
     display: inline-block;
     margin-top: 1rem;
@@ -147,7 +151,39 @@ section{
     padding: 1rem 0;
 }
 
+.icons-container{
+    display: grid;
+    gap: 2rem;
+    grid-template-columns: repeat(auto-fit, minmax(20rem,1fr));
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+}
 
+.icons-container .icons{
+    border: var(--border);
+    box-shadow: var(--box-shadow);
+    border-radius: .5rem;
+    text-align: center;
+    padding: 2.5rem;
+}
+
+.icons-container .icons i{
+    font-size: 4.5rem;
+    color: var(--green);
+    padding-bottom:1rem;
+}
+
+.icons-container .icons h3{
+    font-size: 4.5rem;
+    color: var(--black);
+    padding:.5rem 0;
+    text-shadow: var(--text-shadow);
+}
+
+.icons-container .icons p{
+    font-size: 1.7rem;
+    color: var(--light-color);
+}
 
 
 
@@ -213,6 +249,10 @@ section{
     html{
         font-size: 50%;
     }    
-    
+
+    .home .image img{
+        width: 340px;
+    }
+
 }
 
