--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,21 @@ section:nth-child(even){
 background: #f5f5f5;
 }
 
+.heading{
+    text-align: center;
+    padding-bottom: 2rem;
+    text-shadow: var(--text-shadow);
+    text-transform: uppercase;
+    color: var(--black);
+    font-size: 5rem;
+    letter-spacing: .4rem;
+}
+
+.heading span{
+    text-transform: uppercase;
+    color: var(--green);
+}
+
 .btn {
     display: inline-block;
     margin-top: 1rem;
@@ -75,8 +90,7 @@ background: #f5f5f5;
 /* HEADER */
 .header{
     padding: 2rem 9%;
-    position: fixed;
-    top:0;
+    position: fixed;    top:0;
     left: 0;
     right: 0;
     z-index: 1000;
@@ -116,6 +130,10 @@ background: #f5f5f5;
     cursor: pointer;
     display: none;
 }
+
+/**************************************************************************************\
+                                        HOME
+\**************************************************************************************/
 
 .home{
     display:flex;
@@ -185,6 +203,41 @@ background: #f5f5f5;
     color: var(--light-color);
 }
 
+/**************************************************************************************\
+                                        SERVICES
+\**************************************************************************************/
+
+.services .box-container{
+    display: grid;
+    gap: 2rem;
+    grid-template-columns: repeat(auto-fit, minmax(27rem, 1fr));
+}
+
+.services .box-container .box{
+    background-color: #FFF;
+    border-radius: .5rem;
+    box-shadow: var(--box-shadow);
+    border: var(--border);
+    padding: 2.5rem;
+}
+
+.services .box-container i{
+    color: var(--green);
+    font-size: 5rem;
+    padding-bottom: .5rem;
+}
+
+.services .box-container h3{
+    color: var(--black);
+    font-size: 2.5rem;
+    padding: 1rem 0;
+}
+
+.services .box-container p{
+    color: var(--light-color);
+    font-size: 1.4rem;
+    line-height: 2;
+}
 
 
 
