--- a/css/style.css
+++ b/css/style.css
@@ -239,10 +239,42 @@ background: #f5f5f5;
     line-height: 2;
 }
 
+/**************************************************************************************\
+                                        ABOUT
+\**************************************************************************************/
+
+.about .row {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 2rem;
+}
 
 
+.about .row .image{
+    flex:1 1 45rem;
+}
 
+.about .row .image img{
+    width: 100%;
+}
 
+.about .row .content{
+    flex:1 1 45rem;
+}
+.about .row .content h3{
+    color: var(--black);
+    text-shadow: var(--text-shadow);
+    font-size: 4rem;
+    line-height: 1.8;
+}
+
+.about .row .content p{
+    color: var(--light-color);
+    padding: 1rem 0;
+    font-size: 1.5rem;
+    line-height: 1.8;
+}
 
 
 
@@ -263,6 +295,7 @@ background: #f5f5f5;
     section{
         padding: 2rem;
     }
+
 }
 @media (max-width:768px){
 
