--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,7 @@ background: #f5f5f5;
     color: var(--green);
     cursor: pointer;
     font-size: 1.7rem;
+    background:  #FFF;
 }
 
 .btn span{
@@ -280,12 +281,6 @@ background: #f5f5f5;
                                         DOCTORS
 \**************************************************************************************/
 
-/* .doctors .box-container{
-    display: grid;
-    gap: 2rem;
-    grid-template-columns: repeat(auto-fit, minmax(27rem, 1fr));
-} */
-
 .doctors .box-container{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
@@ -339,11 +334,55 @@ background: #f5f5f5;
     box-shadow: var(--box-shadow);
 }
 
+/**************************************************************************************\
+                                        BOOK
+\**************************************************************************************/
 
+.book .row{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 2rem;
+}
 
+.book .row .image{
+    flex: 1 1 45rem;
+}
 
+.book .row .image img{
+    width: 100%;
+}
 
+.book .row form{
+    flex: 1 1 45rem;
+    background: #FFF;
+    border: var(--border);
+    box-shadow: var(--box-shadow);
+    text-align: center;
+    padding: 2rem;
+    border-radius: .5rem;
+}
 
+.book .row form h3{
+    color: var(--black);
+    padding-bottom: 1rem;
+    font-size: 3rem;
+}
+
+.book .row form .box{
+    width: 100%;
+    margin: .7rem 0;
+    border-radius: .5rem;
+    border: var(--border);
+    font-size: 1.6rem;
+    color: var(--black);
+    text-transform: none;
+    padding: 1rem
+}
+
+.book .row form .btn{
+    padding: 1rem 4rem;
+}
 
 
 
