--- a/css/style.css
+++ b/css/style.css
@@ -518,10 +518,53 @@ background: #f5f5f5;
 
 }
 
+/**************************************************************************************\
+                                        FOOTER
+\**************************************************************************************/
+
+.footer .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(22rem, 1fr));
+    gap:2rem;
+}
+
+.footer .box-container .box h3{
+    font-size: 2.5rem;
+    color: var(--black);
+    padding: 1rem 0;
+    
+}
+
+.footer .box-container .box a{
+    display: block;
+    font-size: 1.5rem;
+    color: var(--light-color);
+    padding: 1rem 0;
+}
+
+.footer .box-container .box a i{
+    padding-right: 0.5rem;
+    color: var(--green);
+}
+
+.footer .box-container .box a:hover i{
+    font-size: 2rem;
+} 
 
 
+.footer .credit {
+    padding: 1rem;
+    padding-top: 2rem;
+    margin-top: 2rem;
+    text-align: center;
+    font-size: 1.2rem;
+    color: var(--light-color);
+    border-top: 0.1rem solid  rgba(0, 0, 0, .1)
+}
 
-
+.footer span{
+    color: var(--green);
+}
 
 
 
